static/src/scss/_bulma_overrides.scss
@use "bulma/sass/utilities/initial-variables" as *;

$container-max-width: $widescreen;
$pre-background: unset;
$family-code: "Fira Code", monospace;
$dropdown-content-radius: 0;
$dropdown-content-offset: 0;
$primary: #e85537;
$link: $primary;
$dark: #17181c;
$content-blockquote-background-color: transparent;

// Navbar overrides
$navbar-item-color: $grey-light;
$navbar-background-color: $dark;
$navbar-item-hover-color: $grey-lighter;
$navbar-item-hover-background-color: $navbar-background-color;
$navbar-colors: (); // Disable other variants to keep the size down

$code-background: none;
$pre-background: none;
$code-padding: 0;
$code: inherit;

